# 2 3 4 6 7 8 fix img wrap

--- a/Practice/src/stylesheets/layout/_header.scss
+++ b/Practice/src/stylesheets/layout/_header.scss
@@ -15,7 +15,7 @@
     .header-main_logo,
     .hamburger-nav {
       figure {
-        @include flex($justify: center, $align: center, );
+        @include flex($justify: center, $align: center);
         max-width: 181px;
         img {
           width: 100%;
@@ -65,25 +65,6 @@
       }
       .desktop {
         display: none;
-      }
-
-      //Navigation mobile
-      .header-main_top {
-        .header-main_logo .mobile {
-          display: block;
-          img {
-            height: 24px;
-          }
-        }
-        .hamburger-nav {
-          display: block;
-          figure {
-            @include flex($justify: center, $align: center);
-            img {
-              height: 24px;
-            }
-          }
-        }
       }
     }
   }
