--- a/Practice/src/stylesheets/pages/home/_company.scss
+++ b/Practice/src/stylesheets/pages/home/_company.scss
@@ -2,8 +2,8 @@
 
 /****** Company Page ******/
 .company {
-    padding: 80px 80px 0 80px;
-    text-align: center;
+  padding: 80px;
+  text-align: center;
   @include flex($direction: column);
   background-color: $second-color;
   @include tablet {
@@ -12,10 +12,6 @@
       grid-template-columns: repeat(3, 1fr);
       justify-items: center;
       .company-card {
-        img {
-          width: 100%;
-          margin: 0;
-        }
       }
     }
   }
@@ -27,15 +23,14 @@
     }
   }
   .introduce-company {
-    margin: 2% 0;
+    margin: 48px 0 80px 0;
   }
   .company-cards {
-    margin: 2% 0;
     .company-card {
       width: 100%;
-      img {
+      height: 100%;
+      figure {
         width: 80%;
-        height: auto;
       }
     }
   }
