--- a/Practice/src/stylesheets/pages/home/_price.scss
+++ b/Practice/src/stylesheets/pages/home/_price.scss
@@ -73,13 +73,11 @@
       width: 100%;
       .price-card {
         width: 100%;
-        @include flex($direction: column, $align: center);
+        @include flex($direction: column, $align: center, $justify: flex-start);
         border: 2px solid #dde1e6;
         padding: 48px 24px;
         gap: 32px;
-        img {
-          margin: 0;
-        }
+        text-align: start;
         .package-name {
           @include flex($direction: column, $align: center, $gap: 8px);
           h3 {
@@ -103,10 +101,14 @@
             line-height: pxToRem(19.6);
           }
         }
+        .package-btn{
+          padding: 20px 30px;
+        }
         .container-package-feature {
           @include flex($direction: column, $gap: 8px, $align: flex-start);
           .package-feature {
-            @include flex($align: center, $justify: center, $gap: 8px);
+            @include flex($align: center, $justify: flex-start, $gap: 8px);
+            width: 115%;
             figure {
               @include flex($justify: center, $align: center);
               max-width: 24px;
